<resources>
    <string name="app_name">WaterSys</string>
    <string name="action_settings">Settings</string>
    <string name="selection_mode">Mode Selection</string>
    <string name="reports">Reports</string>
    <string name="create_mode">Create New Mode</string>
    <string name="config">Configurations</string>
    <string name="logout">Log Out</string>
    <string name="title_placeholder">(e.g. winter mode)</string>
    <string name="title_text">Title</string>
    <string name="description_placeholder">(e.g. waters plants once a week)</string>
    <string name="description_text">Description</string>
    <string name="interval_selection">Waters Plants</string>
    <string name='menu_home'>Home</string>
    <string name='menu_plans'>My Plans</string>
    <string name='menu_settings'>Settings</string>
    <string name="no_plans_found">No plans found, tap the \"+" button to add.</string>
    <string name='time_placeholder'>00:00</string>
    <string name="plan_prefs">plan_prefs</string>
    <string name="pref_id">id</string>
    <string name="pref_title">title</string>
    <string name="level_prefs">level_prefs</string>
    <string name="level_amount">level_amount</string>
    <string name="change_default_plan_intent">com.example.edson.CHANGE_DEFAULT_PLAN</string>7
    <string name="status_connected_txt">System is online!</string>
    <string name="status_notconnected_txt">System is offiline</string>
</resources>
